--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,10 +89,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  4]\n",
+      " [ 2 -3]\n",
+      " [ 3  5]\n",
+      " [-5  4]\n",
+      " [ 0 -1]\n",
+      " [ 3  2]\n",
+      " [-1  1]\n",
+      " [ 5 -2]\n",
+      " [-5  3]\n",
+      " [-5  1]\n",
+      " [-2 -5]\n",
+      " [ 0  4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "nuevos_vectores= [-2,-5], [0,4]\n",
+    "alumnos_aidone = np.append(alumnos_aidone,nuevos_vectores, axis= 0)\n",
+    "print(alumnos_aidone)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  4]\n",
+      " [ 2 -3]\n",
+      " [ 3  5]\n",
+      " [-5  4]\n",
+      " [ 0 -1]\n",
+      " [ 3  2]\n",
+      " [-1  1]\n",
+      " [ 5 -2]\n",
+      " [-5  3]\n",
+      " [-5  1]\n",
+      " [-2 -5]\n",
+      " [ 0  4]\n",
+      " [-2 -5]\n",
+      " [ 0  4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alumnos_aidone= np.vstack([alumnos_aidone,nuevos_vectores])\n",
+    "print(alumnos_aidone)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,9 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Par Rodrigo con vector [5, 4]:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'distancia_2d' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m vec_ref \u001b[38;5;241m=\u001b[39m alumnos_aidone[indice_alumno_ref] \n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m####### 2.2 MODIFICA EL SIGUIENTE FRAGMENTO PARA UTILIZAR METODOS Y FuNCIONES NUMPY, recuerda que la norma se obtiene con np.linalg.norm ####\u001b[39;00m\n\u001b[0;32m---> 27\u001b[0m distancia \u001b[38;5;241m=\u001b[39m \u001b[43mdistancia_2d\u001b[49m(vector, vec_ref, \u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m# Obtenemos la distancia \u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m#########################################################################################################################################\u001b[39;00m\n\u001b[1;32m     29\u001b[0m vector_distancias[indice_curso] \u001b[38;5;241m=\u001b[39m distancia\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'distancia_2d' is not defined"
+     ]
+    }
+   ],
    "source": [
     "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
     "lista_alumnos = ['Rodrigo', 'Lucia', 'Alejandro', 'Valeria', 'Javier', 'Camila', 'Diego', 'Gabriela', 'Mateo', 'Sofía','Teresa','Udo']\n",
@@ -150,6 +224,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Par Rodrigo con vector [5, 4]:\n",
+      "El curso asignado para Rodrigo es: CAI\n",
+      "Par Lucia con vector [2, -3]:\n",
+      "El curso asignado para Lucia es: ER\n",
+      "Par Alejandro con vector [3, 5]:\n",
+      "El curso asignado para Alejandro es: CAI\n",
+      "Par Valeria con vector [-5, 4]:\n",
+      "El curso asignado para Valeria es: NMPC\n",
+      "Par Javier con vector [0, -1]:\n",
+      "El curso asignado para Javier es: ER\n",
+      "Par Camila con vector [3, 2]:\n",
+      "El curso asignado para Camila es: CAI\n",
+      "Par Diego con vector [-1, 1]:\n",
+      "El curso asignado para Diego es: NMPC\n",
+      "Par Gabriela con vector [5, -2]:\n",
+      "El curso asignado para Gabriela es: ER\n",
+      "Par Mateo con vector [-5, 3]:\n",
+      "El curso asignado para Mateo es: NMPC\n",
+      "Par Sofía con vector [-5, 1]:\n",
+      "El curso asignado para Sofía es: NMPC\n",
+      "Par Teresa con vector [2, 3]:\n",
+      "El curso asignado para Teresa es: CAI\n",
+      "Par Udo con vector [1, -4]:\n",
+      "El curso asignado para Udo es: ER\n",
+      "\n",
+      "Matriz de reparto de distancias (alumno vs curso):\n",
+      "[[0. 0. 0.]\n",
+      " [0. 3. 0.]\n",
+      " [2. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 5. 0.]\n",
+      " [2. 0. 0.]\n",
+      " [0. 0. 4.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 2.]\n",
+      " [3. 0. 0.]\n",
+      " [0. 4. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "alumnos_ref = [\"Rodrigo\", \"Gabriela\", \"Mateo\"]\n",
+    "lista_alumnos = ['Rodrigo', 'Lucia', 'Alejandro', 'Valeria', 'Javier', 'Camila', 'Diego', 'Gabriela', 'Mateo', 'Sofía', 'Teresa', 'Udo']\n",
+    "curso_asignado = [\"CAI\", \"ER\", \"NMPC\"]\n",
+    "\n",
+    "# 2.1: Crear la matriz de reparto (12x3) inicializada con ceros\n",
+    "matriz_reparto = np.zeros((12, 3))\n",
+    "\n",
+    "# Número de alumnos\n",
+    "num_alumnos = len(lista_alumnos)\n",
+    "\n",
+    "# 2.2: Recorremos los alumnos y calculamos las distancias a cada curso\n",
+    "for i_vector in range(num_alumnos):  # Recorremos los alumnos\n",
+    "    alumno = lista_alumnos[i_vector]\n",
+    "    vector_alumno = alumnos_aidone[i_vector]\n",
+    "    print(f\"Par {alumno} con vector {vector_alumno}:\")\n",
+    "\n",
+    "    # Inicializamos la distancia mínima\n",
+    "    distancia_minima = 99999999 \n",
+    "    indice_distancia_minima = -1\n",
+    "\n",
+    "    # Vector de distancias a los cursos\n",
+    "    vector_distancias = np.full((3), 1000)  # Inicializamos con un valor alto\n",
+    "\n",
+    "    # Calculamos las distancias a los cursos de referencia\n",
+    "    for indice_curso, alumno_ref in enumerate(alumnos_ref):\n",
+    "        indice_alumno_ref = lista_alumnos.index(alumno_ref)\n",
+    "        vec_ref = alumnos_aidone[indice_alumno_ref]\n",
+    "\n",
+    "        # 2.2: Usamos np.linalg.norm() para calcular la distancia\n",
+    "       \n",
+    "        distancia = np.linalg.norm(np.array(vector_alumno) - np.array(vec_ref))  # Distancia Euclidiana\n",
+    "        vector_distancias[indice_curso] = distancia\n",
+    "\n",
+    "    # 2.3: Elegimos el curso con la distancia mínima usando np.argmin()\n",
+    "    indice_curso_elegido = np.argmin(vector_distancias)  # Índice del curso con la menor distancia\n",
+    "\n",
+    "    # Asignamos la distancia a la matriz de reparto\n",
+    "    matriz_reparto[i_vector, indice_curso_elegido] = vector_distancias[indice_curso_elegido]\n",
+    "    \n",
+    "    print(f\"El curso asignado para {alumno} es: {curso_asignado[indice_curso_elegido]}\")\n",
+    "\n",
+    "# Mostramos la matriz de reparto\n",
+    "print(\"\\nMatriz de reparto de distancias (alumno vs curso):\")\n",
+    "print(matriz_reparto)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,7 +333,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "a Teresa es: CAI y a UDO es: ER"
+   ]
   },
   {
    "attachments": {
@@ -205,9 +380,88 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tablero final:\n",
+      "[[' ' 'X' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' '-' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' 'O' 'O' 'O' 'O']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
    "source": [
-    "import random"
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "tablero = np.full((10, 10), \" \")\n",
+    "\n",
+    "\n",
+    "tablero[0, 1] = \"O\"\n",
+    "tablero[1, 1] = \"O\"\n",
+    "\n",
+    "\n",
+    "tablero[1, 3] = \"O\"\n",
+    "tablero[1, 4] = \"O\"\n",
+    "tablero[1, 5] = \"O\"\n",
+    "tablero[1, 6] = \"O\"\n",
+    "\n",
+    "\n",
+    "disparo_barco = (0, 1)\n",
+    "tablero[disparo_barco] = \"X\"\n",
+    "\n",
+    "\n",
+    "disparo_agua = (2, 2)\n",
+    "tablero[disparo_agua] = \"-\"\n",
+    "\n",
+    "\n",
+    "barco_4_posiciones = \"O\"\n",
+    "colocado = False\n",
+    "\n",
+    "while not colocado:\n",
+    "   \n",
+    "    x = random.randint(0, 9)\n",
+    "    y = random.randint(0, 9)\n",
+    "    orientacion = random.choice([\"N\", \"S\", \"E\", \"O\"])\n",
+    "    \n",
+    "   \n",
+    "    if orientacion == \"N\":  # Norte\n",
+    "        if x - 3 >= 0 and all(tablero[x-i, y] == \" \" for i in range(4)):\n",
+    "            for i in range(4):\n",
+    "                tablero[x-i, y] = \"O\"\n",
+    "            colocado = True\n",
+    "\n",
+    "    elif orientacion == \"S\":  # Sur\n",
+    "        if x + 3 <= 9 and all(tablero[x+i, y] == \" \" for i in range(4)):\n",
+    "            for i in range(4):\n",
+    "                tablero[x+i, y] = \"O\"\n",
+    "            colocado = True\n",
+    "\n",
+    "    elif orientacion == \"E\":  # Este\n",
+    "        if y + 3 <= 9 and all(tablero[x, y+i] == \" \" for i in range(4)):\n",
+    "            for i in range(4):\n",
+    "                tablero[x, y+i] = \"O\"\n",
+    "            colocado = True\n",
+    "\n",
+    "    elif orientacion == \"O\":  # Oeste\n",
+    "        if y - 3 >= 0 and all(tablero[x, y-i] == \" \" for i in range(4)):\n",
+    "            for i in range(4):\n",
+    "                tablero[x, y-i] = \"O\"\n",
+    "            colocado = True\n",
+    "\n",
+    "# Mostrar el tablero actualizado\n",
+    "print(\"Tablero final:\")\n",
+    "print(tablero)\n"
    ]
   },
   {
@@ -220,7 +474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -234,14 +488,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.0"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
